[package]
name = "pkasw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.0", features = ["full"] }
hyper-staticfile = "0.9.1"
tokio = { version = "1.0.0", features = ["full"] }
futures-util = "0.3.24"
http = "0.2.8"