[package]
name = "rustry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tungstenite = "0.8.1"
futures = "0.3"
nix = "0.23"
pty-process = "0.2"
libc = "0.2"
filedescriptor = "0.8.2"